# avatar-server

./: .env  Cargo.toml  Dockerfile  README.md
src/: auth.rs  config.rs  handlers.rs  index.html  main.rs
