[package]
name = "avatar-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
env_logger = "0.11.8"
dotenv = "0.15"
chrono = "0.4"
handlebars = "6.3.2"